--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hollow Knight Silksong, el indie mas esperado de los ultimos años">
     <meta name="keywords" content="juego, indie, hollow, knight, home, hornet">
-    <link rel="shortcut icon" href="../img/logohollowhead.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/logohollowhead.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
@@ -14,13 +14,13 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <title>Hollow Knight Silksong</title>
 </head>
 <body class="bg-index">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-center">
             <a class="navbar-brand" href="/index.html">
-                <img src="../img/silksongLogoBlanco.png" alt="logo" height="100px">
+                <img src="./img/silksongLogoBlanco.png" alt="logo" height="100px">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -32,19 +32,19 @@
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../pages/lore.html">Historia</a>
+                  <a class="nav-link" href="./pages/lore.html">Historia</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/personajes.html">Personajes</a>
+                    <a class="nav-link" href="./pages/personajes.html">Personajes</a>
                   </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/equipo.html">Equipo</a>
+                    <a class="nav-link" href="./pages/equipo.html">Equipo</a>
                   </li>  
                 <li class="nav-item">
-                  <a class="nav-link" href="../pages/tienda.html">Tienda</a>
+                  <a class="nav-link" href="./pages/tienda.html">Tienda</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/galeria.html">Galeria</a>
+                    <a class="nav-link" href="./pages/galeria.html">Galeria</a>
                   </li>
                 </ul>
             </div>
@@ -63,7 +63,7 @@
                 </p>
             </div>
             <div class="col-lg-6 d-flex ">
-                <img class="animate__animated animate__fadeIn mw-100 rounded" src="img/Hollow-Knight-1000x576.jpg" alt="">
+                <img class="animate__animated animate__fadeIn mw-100 rounded" src="./img/Hollow-Knight-1000x576.jpg" alt="">
             </div>
             <div class="col-lg-3 d-flex justify-content-center align-items-center portada-articulo">
                 <p class="portada-parrafo rounded p-1">Hollow Knight tuvo tan buena acogida que lo que en principio iba a ser un DLC se ganó el puesto como título independiente, aunque aun sin fecha de lanzamiento . En Silksong recorreremos el reino de Pharloom bajo la atenta mirada de Hornet, la princesa de Hallownest y una letal cazadora. Su misión será la de escapar de su encierro y averiguar qué está sucediendo en una misteriosa tierra.</p>
